<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meeting_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEFF0"
    tools:context="com.openclassrooms.mareu.ui.meeting_list.MeetingDetailsActivity">

    <android.support.constraint.ConstraintLayout
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="12dp">

                <TextView
                    android:id="@+id/meeting_detail_second_title"
                    style="@style/cardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...
                    android:drawableStart="@drawable/ic_baseline_calendar_month_24"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meeting_detail_second_title"
                    tools:text="@string/meeting_date" />

                <TextView
                    android:id="@+id/meeting_detail_location_room"
                    style="@style/cardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meeting_detail_date"
...
